apps/base/ntfy/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-bazarr/
# https://github.com/morpheus65535/bazarr
#

apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: kube-system
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: ntfy
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: ntfy
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: kube-system
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: ntfy
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          imagePullPolicy: Always
          args: ["serve"]
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
            - name: ntfy-pvc
              mountPath: /var/cache/ntfy
              subPath: cache
            - name: ntfy-pvc
              mountPath: /var/lib/ntfy
              subPath: lib
            - name: config
              mountPath: /etc/ntfy/server.yaml
              subPath: server.yaml
      volumes:
        - name: ntfy-pvc
          persistentVolumeClaim:
            claimName: ntfy-pvc
        - name: config
          configMap:
            name: ntfy
