apps/base/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-dashboard-https
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: ntfy-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.powell.place`)
      kind: Rule
      middlewares:
        - name: security
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
      services:
        - name: ntfy
          port: http
